Fix menu viewport bleed on mobile screens

--- a/scss/_dropdown.scss
+++ b/scss/_dropdown.scss
@@ -38,6 +38,7 @@
 @include media-breakpoint-down(sm) {
   .dropdown-menu {
     width: 100%;
+    position: relative;
   }
 }
 
